# RLC-Circuits

./: .gitmodules  CMakeLists.txt  README.md  analysis.h  circuits.h  components.h  inductors.h  main.cpp  menus.h  resistors.h
src/: CMakeLists.txt  analysis.h  capacitors.h  circuits.h  factories.h  main.cpp  menus.h  plotter.h  stuff.json
tests/: CMakeLists.txt  main.cpp
